[#7+#9 Solutions] Submitting solutions for problems #7 and #9
Switching the standard for problems to be their own isolated .cpp file for now as it's easier to iterate.

--- a/Premake/LeetCode.vcxproj.filters
+++ b/Premake/LeetCode.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="..\Source\6.ZigzagConversion.cpp">
       <Filter>Problems</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\7.ReverseInteger.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\9.PalindromeNumber.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Helpers.h" />
