[RomanToInteger] Adding #13 solution
v1 of #13. Also, more refactoring of old problems to reduce code and simplify files.

--- a/Premake/LeetCode.vcxproj.filters
+++ b/Premake/LeetCode.vcxproj.filters
@@ -33,10 +33,15 @@
     <ClCompile Include="..\Source\9.PalindromeNumber.cpp">
       <Filter>Problems</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\12.IntegerToRoman.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\13.RomanToInteger.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Helpers.h" />
-    <ClInclude Include="..\Source\Problem.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Problems">
