[IntegerToRoman] Adding more solutions for problem #12
Finally found a type-agnostic way of calling solution function pointers with different types of inputs. Maybe later I'll refactor all past problems to use new Testing.h templated functions

--- a/Premake/LeetCode.vcxproj.filters
+++ b/Premake/LeetCode.vcxproj.filters
@@ -39,9 +39,15 @@
     <ClCompile Include="..\Source\13.RomanToInteger.cpp">
       <Filter>Problems</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\11.ContainerWithMostWater.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Helpers.h" />
+    <ClInclude Include="..\Source\Testing.h">
+      <Filter>Problems</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Problems">
