[FizzBuzz] Classic fizz buzz solution
Really leaning into new test framework using Testing.h and templating more in Helpers.h

--- a/Premake/LeetCode.vcxproj.filters
+++ b/Premake/LeetCode.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\Source\11.ContainerWithMostWater.cpp">
       <Filter>Problems</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\412.FizzBuzz.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Helpers.h" />
