[StringToInt-atoi] Solution for #8 atoi
Also adding 3 more easy problems to tackle later, to have easy options for when I am less motivated to grind.

--- a/Premake/LeetCode.vcxproj.filters
+++ b/Premake/LeetCode.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\Source\412.FizzBuzz.cpp">
       <Filter>Problems</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\8.StringToInteger.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Helpers.h" />
