--- a/Premake/LeetCode.vcxproj.filters
+++ b/Premake/LeetCode.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClCompile Include="..\Source\23.MergeKSortedLists.cpp">
       <Filter>Problems</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\24.SwapNodesInPairs.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\25.ReverseNodesInKGroup.cpp">
+      <Filter>Problems</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Helpers.h" />
